refactor: LineTest에서 points 리스트 변경